# ai-image-gateway

./: .gitignore  README.md  config.example.yaml  implementation_plan.md  pyproject.toml
.superpowers/sdd/: task-2-report.md  task-3-report.md
ai_image_gateway/: __init__.py  config.py  errors.py  image_inputs.py  router.py  schema.py  service.py
ai_image_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_image_gateway/auth/: __init__.py  novelai_token.py
ai_image_gateway/contracts/: __init__.py  common.py  generate.py  raw.py
ai_image_gateway/facade/: __init__.py  batch_service.py  image_service.py
ai_image_gateway/processing/: __init__.py  post_processor.py  prompt_tools.py
ai_image_gateway/providers/: __init__.py  base.py  mock.py  (+2 more)
docs/: 2026-07-05-gateway-refactor-boundary.md  2026-07-06-ai-image-gateway-architecture-refactor-implementation-plan.md  2026-07-06-ai-image-gateway-architecture-refactor-spec.md  batch_generate_template.md  batch_image_to_image_folder_template.md  openai_compatible_relay_integration.md
examples/: batch_image_to_image_folder.py  p3_live2d_inpaint.py  quick_start.py  run_batch_generate.py  run_batch_i2i_folder.py  smoke_openai_relay_to_disk.py  smoke_test_nai.py  test_inpaint_business.py
tests/: test_batch_service.py  test_config.py  test_contracts.py  test_image_inputs.py  test_image_service.py  test_mock_provider.py  test_novelai_provider.py  test_novelai_token.py  test_openai_compatible_provider.py  test_p3_live2d_inpaint_workflow.py  test_post_processor.py  test_prompt_tools.py  test_schema.py
(+13 files in other folders)
