[project]
name = "ai-image-gateway"
version = "0.1.0"
description = "Aggregated AI image generation & processing gateway. Provider-agnostic facade for batch image generation, inpainting, and post-processing."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "numpy>=1.24",
    "loguru>=0.7",
]

[project.optional-dependencies]
novelai = ["novelai>=0.2", "argon2-cffi>=23.0"]
gemini = ["google-genai>=1.0"]
rembg = ["rembg>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_image_gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
